--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Mar 09 10:31:29 PST 2017
+#Mon Mar 13 12:17:47 PDT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions-snapshots/gradle-3.6-20170309000026+0000-bin.zip
+distributionUrl=https\://services.gradle.org/distributions-snapshots/gradle-3.6-20170313000015+0000-bin.zip
